# Swallpaper-Flutter

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build-android.yml  build-windows.yml  test.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/swallpaper/app/: MainActivity.kt
android/app/src/main/res/drawable/: launch_background.xml
android/app/src/main/res/mipmap-hdpi/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml
assets/: api_keys.example.json
lib/: app.dart  main.dart
lib/config/: api_config.dart  routes.dart  theme.dart
lib/models/: download_task.dart  favorite_item.dart  media_item.dart  models.dart  wallpaper.dart
lib/providers/: app_state.dart  wallpaper_provider.dart
lib/screens/: explore_screen.dart  home_screen.dart  library_screen.dart  settings_screen.dart  video_player_screen.dart  wallpaper_detail_screen.dart
lib/screens/detail/: detail_screen.dart
lib/screens/explore/: media_explore_screen.dart  wallpaper_explore_screen.dart
lib/screens/home/: home_screen.dart
lib/screens/settings/: settings_screen.dart
lib/services/: api_key_service.dart  base_source.dart  download_service.dart  en_translations.dart  ja_translations.dart  localization_service.dart  source_manager.dart  unsplash_source.dart  wallhaven_source.dart  wallpaper_service.dart  zh_translations.dart
lib/services/sources/: media_sources.dart  wallpaper_sources.dart
lib/widgets/: search_bar_widget.dart  source_chips.dart  wallpaper_grid.dart
lib/widgets/cards/: wallpaper_card.dart
lib/widgets/common/: chip_row.dart  glass_search_bar.dart
test/: models_test.dart  wallpaper_model_test.dart
windows/: CMakeLists.txt
windows/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugin_registrant.h
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  resource.h  run_loop.cpp  run_loop.h
